--- a/BlazorApp2/Pages/_Host.cshtml
+++ b/BlazorApp2/Pages/_Host.cshtml
@@ -17,8 +17,7 @@
     <link href="BlazorApp2.styles.css" rel="stylesheet" />
 </head>
 <body>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
-
+    <component type="typeof(App)" render-mode="Server" />
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
             An error has occurred. This application may no longer respond until reloaded.
